# InnoCaptcha

./: .gitignore  LICENSE  README.md  UploadToGitHub.py  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: codeql.yml
InnoCaptcha/: __init__.py  audio.py  captcha.db  captchas.db  cli.py  config.py  image.py  img.py  math.py  text.py  utils.py
InnoCaptcha/core/: __init__.py  base.py  exceptions.py  generator.py  validator.py
InnoCaptcha/data/dbs/: captcha.db
InnoCaptcha/docs/: README.md  adding_new_captcha_type.md  implementation_plan.md  walkthrough.md
InnoCaptcha/examples/: basic_usage.py  plugin_demo.py
InnoCaptcha/storage/: __init__.py  memory.py  redis.py
InnoCaptcha/types/: __init__.py  example_plugin.py  image.py  math.py
InnoCaptcha/utils/: __init__.py  hashing.py  image_utils.py  randomizer.py
