[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "InnoCaptcha"
version = "0.0.1"
description = "Python library created by InnoSoft-Company tech team for creating captcha."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "InnoSoft Company", email = "midoghanam@hotmail.com" },
  { name = "Mohammed Ahmed Ghanam", email = "midoghanam@hotmail.com" }
]
license = { file = "LICENSE" }
keywords = ["egypt", "data", "cities", "governorates", "timezone", "phone numbers"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
]
[project.scripts]
egydata = "egydata.cli:main"